WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
23711
[GTK] Assorted Scrollbar fixes
https://bugs.webkit.org/show_bug.cgi?id=23711
Summary
[GTK] Assorted Scrollbar fixes
Xan Lopez
Reported
2009-02-03 13:38:36 PST
Fix invisible scrollbars in flotaing divs + a bunch of cleanups.
Attachments
Properly calculate scrollbar location
(2.30 KB, patch)
2009-02-03 13:50 PST
,
Xan Lopez
zecke
: review+
Details
Formatted Diff
Diff
Avoid needless castings.
(3.74 KB, patch)
2009-02-03 13:51 PST
,
Xan Lopez
zecke
: review+
Details
Formatted Diff
Diff
Do not hold extra ref to scrollbar
(2.62 KB, patch)
2009-02-03 13:51 PST
,
Xan Lopez
zecke
: review+
Details
Formatted Diff
Diff
Add manual test for floating div with scrollbar.
(3.08 KB, patch)
2009-02-03 13:52 PST
,
Xan Lopez
zecke
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Xan Lopez
Comment 1
2009-02-03 13:50:31 PST
Created
attachment 27288
[details]
Properly calculate scrollbar location
Xan Lopez
Comment 2
2009-02-03 13:51:05 PST
Created
attachment 27289
[details]
Avoid needless castings.
Xan Lopez
Comment 3
2009-02-03 13:51:35 PST
Created
attachment 27290
[details]
Do not hold extra ref to scrollbar
Xan Lopez
Comment 4
2009-02-03 13:52:01 PST
Created
attachment 27291
[details]
Add manual test for floating div with scrollbar.
Holger Freyther
Comment 5
2009-02-03 14:21:09 PST
Comment on
attachment 27290
[details]
Do not hold extra ref to scrollbar We can kill the d'tor now. I will do it when landing the patch.
Holger Freyther
Comment 6
2009-02-03 16:41:15 PST
Landed in
r40548
-
r40551
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug