2009-02-03 Xan Lopez <xan@gnome.org>

Reviewed by Holger Freyther.

        https://bugs.webkit.org/show_bug.cgi?id=23711

        Properly calculate the scrollbar location for their
        usage in RenderLayout.

        * platform/gtk/ScrollbarGtk.cpp:
        (ScrollbarGtk::frameRectsChanged):

Canonical link: https://commits.webkit.org/32731@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@40548 268f45cc-cd09-0410-ab3c-d52691b4dbfc